<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ejfr.petsrescue.petsrescue.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackgroundApp"
    android:weightSum="9">

    <Button
        android:id="@+id/buttonAddAlert"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorButtonBackground"
        android:text="@string/add_alert"
        android:textColor="@color/colorTextButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/buttonSearchAlerts"
        android:backgroundTint="@color/colorButtonBackground"
        android:textColor="@color/colorTextButton"
        android:text="@string/search_alerts"
        android:layout_margin="4dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"></LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/buttonExitApp"
        android:backgroundTint="@color/colorButtonBackground"
        android:textColor="@color/colorTextButton"
        android:text="@string/label_exit_app"
        android:layout_margin="4dp"
        android:layout_gravity="center"/>


</LinearLayout>
