<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ejfr.petsrescue.petsrescue.AlertActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/colorBackgroundApp"
    android:id="@+id/linearLayoutViewAlert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="17">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dip">

                <TextView
                    android:id="@+id/textViewViewAlertTypeAlert"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/label_view_alert_type_alert"
                    android:textColor="@color/colorText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/imageViewViewAlertPhoto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/default_pet_image" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/textViewAlertTypePetType"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/label_view_alert_type_pet"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/textViewViewAlertPetSize"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/label_view_alert_size_pet"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/textViewAlertViewDate"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/label_view_alert_date"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/textViewViewAlertTime"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:text="@string/label_view_alert_time"
                            android:textColor="@color/colorText" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="2dip"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textViewViewAlertLocation"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/label_view_alert_location"
                    android:textColor="@color/colorText" />

                <TextView
                    android:id="@+id/textViewViewAlertLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorText"
                    android:text="@string/label_view_alert_latitude" />

                <TextView
                    android:id="@+id/textViewViewAlertLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/label_view_alert_longitude"
                    android:textColor="@color/colorText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/textViewViewAlertBreed"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_margin="2dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/label_view_alert_breed"
                    android:textColor="@color/colorText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:weightSum="7">

                <TextView
                    android:id="@+id/textViewViewAlertObservations"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="2dp"
                    android:layout_weight="5"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:minLines="7"
                    android:scrollbars="vertical"
                    android:text="@string/label_view_alert_observations"
                    android:textColor="@color/colorText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/buttonViewAlertBack"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorButtonBackground"
                    android:text="@string/label_view_alert_back"
                    android:textColor="@color/colorTextButton" />

                <Button
                    android:id="@+id/buttonViewAlertMatch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="2"
                    android:backgroundTint="@color/colorButtonBackground"
                    android:gravity="center"
                    android:text="@string/label_view_alert_button_match"
                    android:textColor="@color/colorTextButton" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
